--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ matrix:
       before_install:
         - test -d /usr/local/opt/opencsg/lib || { rmdir /usr/local/opt/opencsg; brew install opencsg; }
         - test -d /usr/local/opt/libzip/lib || { rmdir /usr/local/opt/libzip; brew install libzip; }
+        - brew pin node
         - ./scripts/macosx-build-homebrew.sh
       before_cache:
         - brew cleanup
